Fix header font issue on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -30,7 +30,7 @@ body {
 }
 
 .header-item {
-  margin-left: 1.5em;
+  margin-left: 1em;
   font-weight: bold;
   cursor: pointer;
 }
